# HELXAID

./: .gitignore  HELXAID.spec  LICENSE  README.md  build.bat  build_exe.bat  installer.iss  issues.json  launcher.spec  out.txt
.agent/rules/: page-name.md
.agent/workflows/: build.md  github-push.md
.agents/rules/: always-add-component.md
.agents/workflows/: add-component-name.md  build.md  github-release.md  test-index.md  update-version.md
.nogic/: config.json
.vercel/: project.json
.windsurf/workflows/: build.md  update-version.md
cpp/: FurycubeHID.cpp  hardware_utils.cpp
furycube/: furycube_app.js  furycube_hub.html  furycube_vendor.js
helxaid_native/: CMakeLists.txt  boost_engine_includes.txt  build.bat  build_log2.txt  build_log_verbose.txt  build_output.txt  rebuild.bat
helxaid_native/build_ninja/: CMakeCache.txt
helxaid_native/include/: boost_engine.h  etw_network_monitor.h  file_scanner.h  game_detector.h  hardware_monitor.h  helxaid.h  hid_controller.h  icon_extractor.h  input_hook.h  macro_engine.h  media_player.h
helxaid_native/src/: bindings.cpp  boost_engine.cpp  etw_network_monitor.cpp  file_scanner.cpp  game_detector.cpp  hardware_monitor.cpp  hid_controller.cpp  icon_extractor.cpp  input_hook.cpp  macro_engine.cpp  media_player.cpp  test_headers.cpp  test_headers2.cpp  test_headers3.cpp  test_headers4.cpp  test_headers5.cpp  test_headers6.cpp  test_headers7.cpp  test_headers8.cpp  test_headers9.cpp
native_macro/: CMakeLists.txt  build.bat  build_log.txt  build_output.txt
native_macro/bindings/: python_bindings.cpp
native_macro/include/: hid_controller.hpp  input_hook.hpp  input_simulator.hpp  macro_engine.hpp  timer_manager.hpp
native_macro/include/macros/: base_macro.hpp  toggle_macro.hpp
native_macro/src/: hid_controller.cpp  input_hook.cpp  input_simulator.cpp  macro_engine.cpp  timer_manager.cpp
native_macro/src/macros/: base_macro.cpp  toggle_macro.cpp
python/: AnimatedButton.py  CrosshairGL.py  CrosshairOverlay.py  CrosshairWidget.py  DebugConsoleWidget.py  FurycubeHID.py  HardwarePanelWidget.py  MacroSettingsDialog.py  MacroSettingsPanel.py  MediaKeyService.py  MusicPanelWidget.py  MusicSettingsDialog.py  NetworkMonitor.py  PlaylistWidget.py  RamCleanerPresetDialog.py  VideoPlayerWidget.py  audio_settings.json  crosshair_settings.json  essential_optimizations.py  hardware_wrapper.py  hwinfo_reader.py  launcher.py  native_wrapper.py  network_history.db  network_history.db-shm  network_history.db-wal  network_history.json  smooth_scroll.py  steam_lines.json  test.db  test_init.db  test_video_subtitle_overlay.py  test_vlc.py
python/controlhub/: index.html
python/controlhub/css/: app.c61d4cf1.css
python/controlhub/js/: app.60ff4c9d.js  chunk-vendors.a9126cc7.js
python/integrations/: cpu_controller.py  discord_presence.py  tools_downloader.py
python/macro_profiles/: default.json  macros.json
python/macro_system/: __init__.py
python/macro_system/core/: __init__.py  input_listener.py  input_simulator.py  macro_engine.py  macro_recorder.py  timer_manager.py
python/macro_system/detection/: __init__.py  app_detector.py  gesture_detector.py
python/macro_system/integration/: __init__.py  hardware_manager.py  launcher_bridge.py  native_bridge.py
python/macro_system/macros/: __init__.py  base_macro.py  conditional_macro.py  gesture_macro.py  remap_macro.py  script_macro.py  sequence_macro.py  toggle_macro.py
python/macro_system/profiles/: __init__.py  layer_system.py  profile_manager.py
python/macro_system/sandbox/: __init__.py  script_sandbox.py
python/tools/: check_furycube.py  controlhub_server.py  list_hid.py  read_config.py  show_buttons.py  test_hid.py  test_macro_system.py  test_save.py  verify_mapping.py
web/: SHARED_TRANSITION_DOCS.md  changelog.html  deploy-vercel.bat  index.html  main.js  shared-transition-demo.html  shared-transition-tokens.css  shared-transition.js  styles.css
web/react/: SharedTransitionExample.jsx  useSharedTransition.js
